2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_conditionally_defined): Rename as...
	(&check_variable_unconditionally_defined): this.
	(&variable_dump): Fix the output.
	(&variable_defined, &macro_define): Since conditions are
	canonicalized, don't use a loop to look for a condition: read the
	hash.
	(&macro_define, &rule_define, &read_am_file, &file_contents):
	Rename $cond_string as $cond.
	* distdir.am (PACKAGE, VERSION): Remove; since they are already
	discovered via AC_SUBST, they now trigger a `defined twice' error.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_footer, &handle_installdirs)
	(&read_main_am_file): Don't read %contents directly, use
	&variable_value.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&read_am_file): Define the variables in a single
	shot.
	Factor the $saw_bk code.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&read_am_file): Keep $cond_string up to date.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&define_variable): Use &macro_define.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Don't lose the location if we
	redefine a variable.
	Don't push all the variables in @var_list, let...
	(&read_am_file, &file_contents): ... do it.
	(&define_pretty_variable): Use macro_define.
	(&am_install_var): Delete the value of variables being redefined
	to pacify &macro_define which checks that variables are not
	doubly defined.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&conditional_dump): Rename as...
	(&variables_dump): this.  Use...
	(&variable_dump): this new sub.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Maintain $cond_string sync with
	@cond_stack.
	Output rules only if not under `FALSE'.
	Define variables under $cond_string.
	* scripts.am: For the time being if/endif does not work properly
	with macros.

2001-03-23  Akim Demaille  <akim@epita.fr>
