@@ -6416,11 +6416,12 @@ sub read_am_file
 	}
 	elsif (/$IF_PATTERN/o)
 	{
-	    my $cond = $1;
-	    &am_line_error ($., "$cond does not appear in AM_CONDITIONAL")
-		if ! $configure_cond{$cond} && $cond !~ /^TRUE|FALSE$/;
+	    my $new_cond = $1;
+	    &am_line_error ($., "$new_cond does not appear in AM_CONDITIONAL")
+		if ! $configure_cond{$new_cond} && $new_cond !~ /^TRUE|FALSE$/;
 	    push (@conditional_stack,
-		  ($cond =~ /^TRUE|FALSE$/) ? "$cond" : "${cond}_TRUE");
+		  (($new_cond =~ /^TRUE|FALSE$/)
+		   ? "$new_cond" : "${new_cond}_TRUE"));
 	    $cond = conditional_string (@conditional_stack);
 	}
 	elsif (/$ELSE_PATTERN/o)
@@ -6781,11 +6782,11 @@ sub file_contents ($%)
         # Handling the conditionals.
         elsif (/$IF_PATTERN/o)
 	{
-	    my $cond = $1;
-	    &am_line_error ($., "$cond does not appear in AM_CONDITIONAL")
-		if ! $configure_cond{$cond} && $cond !~ /^TRUE|FALSE$/;
+	    my $new_cond = $1;
+	    &am_line_error ($., "$new_cond does not appear in AM_CONDITIONAL")
+		if ! $configure_cond{$new_cond} && $new_cond !~ /^TRUE|FALSE$/;
 	    push (@cond_stack,
-		  ($cond =~ /^TRUE|FALSE$/) ? "$cond" : "${cond}_TRUE");
+		  ($new_cond =~ /^TRUE|FALSE$/) ? "$new_cond" : "${new_cond}_TRUE");
 	    $cond = conditional_string (@cond_stack);
 	}
 	elsif (/$ELSE_PATTERN/o)
